Image stretch bug fixed
D-flex container issues hopefully corrected

--- a/style.css
+++ b/style.css
@@ -27,12 +27,14 @@ nav ul li {
 }
 
 #me {
-    margin-top: 7%;
+    bottom: 0%;
+    position: fixed;
+    padding-bottom: 3%;
 }
 
-.img-fluid {
-    max-width: 70%; /* or to whatever you want here */
-    max-height: 310px; /* or to whatever you want here */  
+.rounded-circle {
+    max-width: 75%; /* or to whatever you want here */
+    max-height: 450px; /* or to whatever you want here */  
 } 
 /* .rounded-circle:hover {
     -webkit-filter: sepia(1);
